...
                                  crossAxisAlignment:
                                      CrossAxisAlignment.stretch,
                                  children: [
                                    SizedBox(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: const ValueKey('emailField_vg1w'),
                                        controller:
                                            _model.emailFieldTextController,
                                        focusNode: _model.emailFieldFocusNode,
                                        autofocus: false,
                                        textCapitalization:
                                            TextCapitalization.none,
...
                                      ),
                                    ),
                                    Builder(
                                      builder: (context) => SizedBox(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: const ValueKey('passwordField_5h9n'),
                                          controller: _model
                                              .passwordFieldTextController,
                                          focusNode:
                                              _model.passwordFieldFocusNode,
                                          onFieldSubmitted: (_) async {
                                            if ((await getPermissionStatus(
...
                                      ),
                                    ),
                                    Align(
                                      alignment: const AlignmentDirectional(0.0, 0.0),
                                      child: Builder(
                                        builder: (context) => FFButtonWidget(
                                          key: const ValueKey('loginButton_f3dh'),
                                          onPressed: () async {
                                            currentUserLocationValue =
                                                await getCurrentUserLocation(
                                                    defaultLocation:
                                                        const LatLng(0.0, 0.0));
                                            if (_model.formKey.currentState ==
...
