...
                      minHeight: MediaQuery.sizeOf(context).height * 1.0,
                      maxWidth: MediaQuery.sizeOf(context).width * 1.0,
                      maxHeight: MediaQuery.sizeOf(context).height * 1.0,
                    ),
                    decoration: const BoxDecoration(),
                    child: Column(
                      key: const ValueKey('Column_d3zz'),
                      mainAxisSize: MainAxisSize.max,
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        InkWell(
                          splashColor: Colors.transparent,
                          focusColor: Colors.transparent,
...
